--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,17 @@
 <body>
 	<p>Welcome to the chat app</p>
 
-	<script src="/socket.io/socket.io.js" type="text/javascript"></script>
-	<script src="/js/index.js" type="text/javascript">
+	<ol id="messages">
+		
+	</ol>
+	<form id="message-form">
+		<input type="text" name="message" placeholder="Your message here" />
+		<button>Send</button>
+	</form>
+
+	<script src="/socket.io/socket.io.js"></script>
+	<script src="/js/libs/jquery-3.2.1.min.js"></script>
+	<script src="/js/index.js">
 		
 	</script>
 </body>
