--- a/public/index.html
+++ b/public/index.html
@@ -3,34 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="/css/styles.css">
-	<title></title>
+	<title>Join | ChatApp</title>
 </head>
-<body class="chat">
+<body>
 
-	<div class="chat__sidebar">
-		<h3>People</h3>
-		<div id="users"></div>
-	</div>
-
-	<div class="chat__main">
-		<ol id="messages" class="chat__messages"></ol>
-		<div class="chat__footer">
-			<form id="message-form">
-				<input type="text" name="message" placeholder="Your message here" autofocus autocomplete="off" />
-				<button>Send</button>
-			</form>
-			<button id="send-location">Send location</button>
-		</div>
-	
-	
-	</div>
-	
-
-	<script src="/socket.io/socket.io.js"></script>
-	<script src="/js/libs/jquery-3.2.1.min.js"></script>
-	<script src="/js/libs/moment.js"></script>
-	<script src="/js/index.js">
-		
-	</script>
 </body>
 </html>
